--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=s426206
 spring.datasource.password=ieseriessssumsm
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
+spring.jackson.serialization.write_dates_as_timestamps=false
